--- a/model.ipynb
+++ b/model.ipynb
@@ -404,48 +404,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-0.125699043273926,  0.208170861005783,  0.165499106049538,\n",
-      "          ...,  0.269221395254135, -0.027263864874840,\n",
-      "         -0.453361988067627],\n",
-      "        [-0.267356455326080, -0.179654389619827, -0.219347909092903,\n",
-      "          ...,  0.261154115200043,  0.135896682739258,\n",
-      "         -0.524131953716278],\n",
-      "        [ 0.205250397324562,  0.023807473480701, -0.093045689165592,\n",
-      "          ..., -0.079641662538052,  0.219029158353806,\n",
-      "         -0.382924199104309],\n",
-      "        ...,\n",
-      "        [-0.056071020662785,  0.259795725345612,  0.132375314831734,\n",
-      "          ...,  0.129218161106110,  0.152507871389389,\n",
-      "         -0.209005787968636],\n",
-      "        [ 0.002225100994110, -0.028226807713509, -0.167661815881729,\n",
-      "          ...,  0.344607472419739,  0.010264240205288,\n",
-      "         -0.270291686058044],\n",
-      "        [ 0.125593304634094,  0.107458181679249, -0.094442844390869,\n",
-      "          ...,  0.013903625309467,  0.194097697734833,\n",
-      "         -0.503260493278503]], grad_fn=<AddmmBackward>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = LSTM_CNN()\n",
-    "T=Variable(torch.FloatTensor([[1.0,1.0],[1.0,1.0]]))\n",
-    "x1 = Variable(torch.LongTensor(x_batch_train[:32]))\n",
-    "x2 = Variable(torch.FloatTensor(x_csv_train[:32]))\n",
-    "out = model(T, x2)\n",
-    "print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {
     "collapsed": true
@@ -3338,7 +3296,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = LSTM_CNN()\n",
@@ -3693,13 +3653,7 @@
       "====================  epoch:71  ========================\n",
       "tensor(116., grad_fn=<TruncBackward>)***48\n",
       "====================  epoch:72  ========================\n",
-      "tensor(116., grad_fn=<TruncBackward>)***48\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "tensor(116., grad_fn=<TruncBackward>)***48\n",
       "====================  epoch:73  ========================\n",
       "tensor(115., grad_fn=<TruncBackward>)***48\n",
       "====================  epoch:74  ========================\n",
