第四次提交

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1672,124 +1672,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1NAoA1R8uZI#333.12#training#229\n",
-      "\n",
-      "cFcLgFsiZUE#329.92#training#109\n",
-      "\n",
-      "BFz-pqB2Opw#208.74#training#301\n",
-      "\n",
-      "zPCtV7YcmkA#366.56#validation#205\n",
-      "\n",
-      "uFbAiNoQYQE#307.62#training#114\n",
-      "\n",
-      "HEQqdbXagok#340.96#training#105\n",
-      "\n",
-      "6nVIgasiUtw#227.22#validation#425\n",
-      "\n",
-      "T_o_T3LEYLY#490.86#validation#406\n",
-      "\n",
-      "1uoT5TjyWsU#240.05#training#113\n",
-      "\n",
-      "EcPsOyNjKYE#246.7#training#210\n",
-      "\n",
-      "WlkaUxBwURQ#288.02#validation#211\n",
-      "\n",
-      "lRwMt_eHjxU#313.73#validation#401\n",
-      "\n",
-      "lKm5Ji1Fr4U#370.31#validation#122\n",
-      "\n",
-      "ivLLGfX0YUs#295.54#training#416\n",
-      "\n",
-      "vUhoMXc7FJM#1106.12#training#227\n",
-      "\n",
-      "rlHZ8xe9G10#611.64#training#209\n",
-      "\n",
-      "Xgp4BTstS20#164.24#training#108\n",
-      "\n",
-      "a5FoLWnEiAI#595.85#validation#416\n",
-      "\n",
-      "r10vxqLvy7U#156.29#training#212\n",
-      "\n",
-      "lU28_L508vo#293.14#training#319\n",
-      "\n",
-      "hJzPVZf6JVo#421.94#training#303\n",
-      "\n",
-      "rXR5nuiXtZQ#235.96#training#403\n",
-      "\n",
-      "UkqQAynrM2g#366.22#validation#112\n",
-      "\n",
-      "Vyrq2i3R_Sk#319.67#training#209\n",
-      "\n",
-      "BktdaTg6_E4#371.9#validation#405\n",
-      "\n",
-      "0q38LzW-axY#310.96#training#306\n",
-      "\n",
-      "WYAFPvlDB_A#256.86#validation#308\n",
-      "\n",
-      "TsEyXJqB4vk#548.24#training#413\n",
-      "\n",
-      "gYWqhml_YJQ#307.41#validation#403\n",
-      "\n",
-      "t1cUwX4Xzt0#175.82#training#206\n",
-      "\n",
-      "Z5bpo2sBsl8#309.96#validation#216\n",
-      "\n",
-      "odLBmYsUaHI#229.48#training#201\n",
-      "\n",
-      "lgg6luYfQ1w#378.7#training#116\n",
-      "\n",
-      "EP2OBrPPWtU#172.94#training#102\n",
-      "\n",
-      "9guuyTr8EUg#468.14#validation#302\n",
-      "\n",
-      "xXSBn23NBJU#258.96#training#106\n",
-      "\n",
-      "PqyqB_FkWrQ#328.05#training#422\n",
-      "\n",
-      "fqqpdOpgkdc#300.78#training#126\n",
-      "\n",
-      "GCwrUPndL4g#211.07#training#120\n",
-      "\n",
-      "5haTwcEIyE8#240.7#training#102\n",
-      "\n",
-      "sb58mkT8_ak#310.03#training#403\n",
-      "\n",
-      "dsI9QVhmsGg#167.78#training#124\n",
-      "\n",
-      "z1S8WkUoQtU#186.74#training#102\n",
-      "\n",
-      "m6Fuxu5LjYg#307.68#training#105\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open (test,'r') as f:\n",
     "    with open(test2,'w') as f2:\n",
     "        count=0\n",
+    "        ll=''\n",
     "        for line in f:\n",
-    "            ss=''\n",
-    "            if line[0]!='\"' and line[0]!='#':\n",
-    "                print(\"***********\"+str(count))\n",
-    "            if line[0]=='\"':\n",
-    "                t=line.split(':')\n",
-    "                l1=t[0][1:-1]\n",
-    "                l2=t[2].split(',')[0][1:]#时间长度\n",
-    "                l3=t[3].split(',')[0][2:-1]#训练集\n",
-    "                l4=t[4].split(',')[0][2:-1]\n",
-    "                mess=l1+'#'+l2+'#'+l3+'#'+l4+'\\n'\n",
-    "                print(mess)\n",
-    "                f2.write(mess)\n",
+    "            count+=1\n",
+    "            if line[0]!='#':\n",
+    "                ll=line[:-1]\n",
     "            else:\n",
-    "                f2.write(line)\n",
-    "            count+=1"
+    "                mess=ll+line\n",
+    "                f2.write(mess)"
    ]
   },
   {
