--- a/TSG/model_for_GPU.ipynb
+++ b/TSG/model_for_GPU.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-2d5366223028>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfunctional\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptim\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0moptim\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -312,7 +324,6 @@
     "    counter = Counter(all_data)\n",
     "    count_pairs = counter.most_common(vocab_size - 1)\n",
     "    words, _ = list(zip(*count_pairs))\n",
-    "    # 添加一个 <PAD> 来将所有文本pad为同一长度\n",
     "    words = ['<PAD>'] + list(words)\n",
     "    open(vocab_dir, mode='w').write('\\n'.join(words) + '\\n')"
    ]
@@ -747,9 +758,9 @@
     "        self.pdist = L2dist_for_batch(2)    \n",
     "\n",
     "    def forward(self, input, gt_dist):#gt_dist:[batch_size, 2], input:[batch_size, num, embed_size]\n",
-    "        m = input.size()[1] - 1   # #paired\n",
-    "        a = input[:, 0, :]              # anchor\n",
-    "        p = input[:, 1:m + 1, :]        # paired (postive, negtive)\n",
+    "        m = input.size()[1] - 1       # #paired\n",
+    "        a = input[:, 0, :]            # anchor\n",
+    "        p = input[:, 1:m + 1, :]      # paired (postive, negtive)\n",
     "        \n",
     "        batch = input.size()[0]\n",
     "        idxs = torch.arange(1, m + 1).cuda()\n",
@@ -856,7 +867,7 @@
     "        line = begin_time + ' | ' + current_time + (' | Epoch: %3d | Loss: %.6f | lr: %.6f' % (inital_epoch + epoch, train_loss_avg, get_learning_rate(optimizer)))\n",
     "        print(line)\n",
     "        write_resualt_file(save_path + 'resualt.txt', line)\n",
-    "        #adjust_learning_rate(optimizer = optimizer, inital_lr = inital_lr)\n",
+    "        adjust_learning_rate(optimizer = optimizer, inital_lr = inital_lr)\n",
     "        writer.add_scalar('train_loss', train_loss_avg, global_step = epoch)\n",
     "        writer.add_scalar('lr', get_learning_rate(optimizer), global_step = epoch)\n",
     "\n",
